Try to fix pre block overflow, #2

--- a/static/style.css
+++ b/static/style.css
@@ -108,4 +108,7 @@ pre, code {
   border: 1px solid #DDDDDD;
   font-size: 13px;
   padding: 3px 5px;
-  border-radius: 3px; }
+  border-radius: 3px;
+  overflow: auto;
+}
+
